--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -95,10 +95,10 @@
   					</b>
         <ul>
           <li>
-            <a href="/static//登录页面\index.html">你好，请登录</a>
+            <a href="http://auth.gulimall.com/login.html">你好，请登录</a>
           </li>
           <li>
-            <a href="/static//注册页面\index.html" class="li_2">免费注册</a>
+            <a href="http://auth.gulimall.com/reg.html" class="li_2">免费注册</a>
           </li>
           <span>|</span>
           <li>
@@ -244,8 +244,8 @@
               <div class="user_info_show">
                 <p class="">Hi, 欢迎来到!</p>
                 <p>
-                  <a href="/static/#" class="">登录</a>
-                  <a href="/static/#" class="">注册</a>
+                  <a href="http://auth.gulimall.com/login.html" class="">登录</a>
+                  <a href="http://auth.gulimall.com/reg.html" class="">注册</a>
                 </p>
               </div>
             </div>
