--- a/gulimall-search/src/main/resources/templates/list.html
+++ b/gulimall-search/src/main/resources/templates/list.html
@@ -402,8 +402,8 @@
         <a href="http://gulimall.com"><img src="/static/search/./image/logo1.jpg" alt=""></a>
     </div>
     <div class="header_form">
-        <input type="text" placeholder="手机" />
-        <a href="/static/search/#">搜索</a>
+        <input type="text" placeholder="手机" id="keyword_input" th:value="${param.keyword}"/>
+        <a href="javascript:searchByKeyword()">搜索</a>
     </div>
     <div class="header_ico">
         <div class="header_gw">
@@ -1025,9 +1025,9 @@
                     <!--综合排序-->
                     <div class="filter_top">
                         <div class="filter_top_left">
-                            <a href="/static/search/#">综合排序</a>
-                            <a href="/static/search/#">销量</a>
-                            <a href="/static/search/#">价格</a>
+                            <a class="sort_a" sort="hotScore" href="/static/search/#">综合排序</a>
+                            <a class="sort_a" sort="saleCount" href="/static/search/#">销量</a>
+                            <a class="sort_a" sort="skuPrice" href="/static/search/#">价格</a>
                             <a href="/static/search/#">评论分</a>
                             <a href="/static/search/#">上架时间</a>
                         </div>
@@ -1160,7 +1160,7 @@
                                 <a href="/static/search/#">关注</a>
                             </div>
                             <p class="da">
-                                <a href="/static/search/#" title="购买AppleCare+，获得原厂2年整机保修(含电池)，和多达2次意外损坏的保修服务。购买勾选：保障服务、原厂保2年。">
+                                <a th:href="|http://item.gulimall.com/${product.skuId}.html|" title="购买AppleCare+，获得原厂2年整机保修(含电池)，和多达2次意外损坏的保修服务。购买勾选：保障服务、原厂保2年。">
                                     <img th:src="${product.skuImg}" class="dim">
                                 </a>
                             </p>
@@ -1203,23 +1203,20 @@
                     <div class="filter_page">
                         <div class="page_wrap">
                             <span class="page_span1">
-                                <a href="/static/search/#">
+                                <a th:attr="pn=${result.pageNum - 1}" class="page_a" th:if="${result.pageNum>1}">
                                     < 上一页
                                 </a>
-                                <a href="/static/search/#" style="border: 0;color:#ee2222;background: #fff">1</a>
-                                <a href="/static/search/#">2</a>
-                                <a href="/static/search/#">3</a>
-                                <a href="/static/search/#" style="border: 0;font-size: 20px;color: #999;background: #fff">...</a>
-                                <a href="/static/search/#">169</a>
-                                <a href="/static/search/#">
+                                <a th:each="nav:${result.pageNavs}" th:attr="pn=${nav},style=${nav == result.pageNum?'border: 0;color:#ee2222;background: #fff':''}"
+                                        class="page_a" href="/static/search/#" style="" >[[${nav}]]</a>
+                                <a class="page_a" th:attr="pn=${result.pageNum + 1}" th:if="${result.pageNum<result.totalPages}">
                                     下一页 >
                                 </a>
                             </span>
                             <span class="page_span2">
-                                <em>共<b>169</b>页&nbsp;&nbsp;到第</em>
+                                <em>共<b>[[${result.totalPages}]]</b>页&nbsp;&nbsp;到第</em>
                                 <input type="number" value="1">
                                 <em>页</em>
-                                <a href="/static/search/#">确定</a>
+                                <a class="page_submit">确定</a>
                             </span>
                         </div>
                     </div>
@@ -1970,6 +1967,76 @@
             location.href = location.href + "&" + name + "=" + value;
         } else {
             location.href = location.href + "?" + name + "=" + value;
+        }
+    }
+
+    function searchByKeyword() {
+        searchProducts("keyword",$("#keyword_input").val());
+    }
+
+    $(".page_a").click(function () {
+        let pn = $(this).attr("pn");
+        let href = location.href;
+        if(href.indexOf("pageNum")!=-1) {
+            location.href = replaceAndAddParamVal(href,"pageNum",pn);
+        } else {
+            location.href = location.href+"&pageNum="+pn;
+        }
+        return false;
+    }) ;
+
+    function replaceAndAddParamVal(url,paramName,replaceVal) {
+        var oUrl = url.toString();
+
+        //如果没有就添加
+        if (url.indexOf(paramName) != -1) {
+            var re = eval('/('+paramName+'=)([^&]*)/gi');
+            var nUrl = oUrl.replace(re,paramName+'='+replaceVal);
+            return nUrl;
+
+        } else {
+            if (url.indexOf("?") != -1) {
+                var nUrl = oUrl + "&" + paramName + "=" +replaceVal
+                return nUrl;
+            } else {
+                var nUrl = oUrl + "?" + paramName + "=" +replaceVal
+                return nUrl;
+            }
+        }
+
+    }
+
+    $(".sort_a").click(function () {
+        //改变选中样式
+        changeStyle(this);
+
+        //跳转到指定位置 sort=skuPrice_asc/desc
+        let sort = $(this).attr("sort");
+        sort = $(this).hasClass("desc")?sort+"_desc":sort+"_asc"
+        location.href = replaceAndAddParamVal(location.href,"sort",sort);
+
+        //禁用默认行为
+        return false;
+    })
+
+    function changeStyle(ele) {
+        $(".sort_a").css({"color":"#333", "border-color":"#CCC","background":"#FFF"})
+        $(".sort_a").each(function () {
+            var text = $(this).text().replace("↑","").replace("↓","");
+            $(this).text(text);
+        })
+        $(ele).css({"color":"#FFF", "border-color":"#e4393c","background":"#e4393c"})
+
+        //改变升降序
+        $(ele).toggleClass("desc"); //加上就是降序，不加就是升序
+        if($(ele).hasClass("desc")) {
+            //降序
+            var text = $(ele).text().replace("↑","").replace("↓","");
+            $(ele).text(text + "↓")
+        } else {
+            //升序
+            var text = $(ele).text().replace("↑","").replace("↓","");
+            $(ele).text(text + "↑")
         }
     }
 </script>
