加入社交登入

--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -58,6 +58,7 @@
 						请输入账户名和密码
 					</div>
 					<form action="/login" method="post">
+						<div style="color: red" th:text="${errors!=null?(#maps.containsKey(errors,'msg')?errors.msg:''):''}"></div>
 						<ul>
 							<li class="top_1">
 								<img src="/static/login/JD_img/user_03.png" class="err_img1" />
@@ -70,7 +71,7 @@
 							<li class="bri">
 								<a href="/static/login/">忘记密码</a>
 							</li>
-							<li class="ent"><button type="submit" class="btn2"><a class="a">登 &nbsp; &nbsp;录</a></button></li>
+							<li class="ent"><button type="submit" class="btn2"><a>登 &nbsp; &nbsp;录</a></button></li>
 						</ul>
 					</form>
 
@@ -78,9 +79,8 @@
 				<div class="si_out">
 					<ul>
 						<li>
-							<a href="/static/login/#">
-								<img src="/static/login/JD_img/qq.png" />
-								<span>QQ</span>
+							<a href="https://api.weibo.com/oauth2/authorize?client_id=1739965043&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">
+								<img src="/static/login/JD_img/weibo.png"/>
 							</a>
 						</li>
 						<li class="f4"> | </li>
